[gd_scene load_steps=2 format=3 uid="uid://bwtswkije023r"]

[ext_resource type="Script" uid="uid://dvgvb78jdbc5s" path="res://osc_controller.gd" id="1_7jjdm"]

[node name="OscController" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 120.0
offset_top = 128.0
offset_right = 808.0
offset_bottom = 288.0
script = ExtResource("1_7jjdm")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.333139, 7.549308e-05, 0.33354992, 1)

[node name="AmpControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 320.0
offset_top = 16.0
offset_right = 552.0
offset_bottom = 72.0

[node name="HSlider" type="HSlider" parent="AmpControl"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -40.0
offset_right = 104.0
grow_horizontal = 2
grow_vertical = 0
max_value = 1.0
step = 0.2
tick_count = 5
ticks_on_borders = true

[node name="Label" type="Label" parent="AmpControl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Amp"

[node name="FreqControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 320.0
offset_top = 88.0
offset_right = 552.0
offset_bottom = 144.0

[node name="HSlider" type="HSlider" parent="FreqControl"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -40.0
offset_right = 104.0
grow_horizontal = 2
grow_vertical = 0
min_value = 1.0
max_value = 5.0
value = 1.0
tick_count = 6
ticks_on_borders = true

[node name="Label" type="Label" parent="FreqControl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Freq"

[node name="PhaseControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 552.0
offset_top = 56.0
offset_right = 688.0
offset_bottom = 104.0

[node name="HSlider" type="HSlider" parent="PhaseControl"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.0
offset_top = -40.0
offset_right = 48.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="PhaseControl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.0
offset_top = -8.0
offset_right = 34.0
offset_bottom = 15.0
grow_horizontal = 2
text = "Phase Shift"

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 16.0
offset_right = 264.0
offset_bottom = 136.0
item_count = 4
item_0/text = "Sin"
item_1/text = "Saw"
item_2/text = "Square"
item_3/text = "Triangle"
